# intelsgx-aes

./: CMakeLists.txt  oai_db.sql  random_exp.txt  sgx-aead-agent.service  test_agent_io.py  tutor.txt
benchmark/: aead_udf.c  bench_insert.sh  bench_select.sh  bench_subscriber.sh  bench_subscriber2.sh  dec_monitor_resources.csv  enc_monitor_resources.csv  i_plain_monitor_resources.csv  mini_stats.sh  monitor_resources.sh  s_plain_monitor_resources.csv
enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Enclave.edl
host/: CMakeLists.txt  HostIO.cpp  agent.cpp
